# Fennel-Protocol

./: .editorconfig  .envrc  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile-Actions  Dockerfile-Local  README.md  SECURITY.md  SETUP-NODE.md  Vagrantfile  backend.tf  build.sh  collator-1.sh  collator-2.sh  docker-compose.yml  docker-entry.sh  dockerscript.sh  fennel-nginx-conf-boot.sh  fennel-nginx-conf-collator-1.sh  fennel-nginx-conf-collator-2.sh  fennel-nginx-conf-collator-3.sh  fennel-nginx-conf-collator-R.sh  fennel-nginx-conf-validator-2.sh  fennel-nginx-conf-validator-3.sh  fennel-nginx-conf-validator.sh  fennel-protocol-boot-terraform-start.sh  fennel-protocol-collator-1-terraform-start.sh  fennel-protocol-collator-2-terraform-start.sh  fennel-protocol-collator-3-terraform-start.sh  fennel-protocol-collator-R-terraform-start.sh  fennel-protocol-collator-rococo-terraform-start.sh  fennel-protocol-validator-2-terraform-start.sh  fennel-protocol-validator-3-terraform-start.sh  fennel-protocol-validator-terraform-start.sh  main.tf  para-1000-genesis-state  para-1000-wasm  para-4261-genesis-state  (+11 more)
.github/workflows/: check.yml  workflow.yaml  workflow.yml
articles/: fennel-protocol-milestone-1.md
docs/: index.html  settings.html  source-files.js
docs/aead/: struct.Error.html  struct.Payload.html  trait.AeadCore.html  type.Key.html  type.Nonce.html  type.Tag.html
docs/aes/: constant.BLOCK_SIZE.html  struct.Aes192.html  trait.BlockDecrypt.html
docs/aes_gcm/: constant.A_MAX.html  constant.P_MAX.html  struct.AesGcm.html  trait.AeadCore.html  type.Aes128Gcm.html  type.Aes256Gcm.html  type.Key.html  type.Tag.html
docs/ahash/: trait.CallHasher.html
docs/ansi_term/: fn.ANSIStrings.html  fn.sub_string.html  fn.unstyle.html  fn.unstyled_len.html  struct.ANSIGenericString.html  struct.ANSIGenericStrings.html  struct.Prefix.html  type.ANSIByteString.html  type.ANSIByteStrings.html
docs/anyhow/: struct.Chain.html  struct.Error.html  trait.Context.html  type.Result.html
docs/approx/: struct.AbsDiff.html  struct.Ulps.html  trait.AbsDiffEq.html  trait.RelativeEq.html
docs/arrayvec/: struct.ArrayString.html  struct.ArrayVec.html  struct.Drain.html
docs/asn1_der/: struct.Asn1DerError.html  struct.CopyingSource.html  struct.DerObject.html
docs/async_channel/: enum.TryRecvError.html  enum.TrySendError.html  struct.Receiver.html  struct.Recv.html  struct.Send.html  struct.SendError.html
docs/async_executor/: struct.Executor.html  struct.LocalExecutor.html
docs/async_global_executor/: fn.block_on.html  fn.spawn.html  struct.GlobalExecutorConfig.html  struct.Task.html
docs/async_io/: struct.Async.html  struct.ReadableOwned.html  struct.Timer.html
docs/async_lock/: struct.Mutex.html  struct.MutexGuard.html  struct.RwLockWriteGuard.html  struct.SemaphoreGuard.html  struct.SemaphoreGuardArc.html
docs/async_mutex/: struct.MutexGuard.html  struct.MutexGuardArc.html
docs/async_process/: struct.Child.html  struct.ChildStdin.html  struct.ChildStdout.html  struct.Command.html
docs/async_std/: macro.write.html
docs/async_std_resolver/: fn.resolver.html  fn.resolver_from_system_conf.html  struct.ResolveError.html
docs/async_task/: fn.spawn_unchecked.html  index.html  struct.Task.html
docs/asynchronous_codec/: struct.Bytes.html  struct.BytesCodec.html  struct.BytesMut.html  struct.FramedRead.html  struct.FramedWrite.html  struct.LengthCodec.html  struct.LinesCodec.html  trait.Encoder.html
docs/atomic/: index.html
docs/atomic_waker/: struct.AtomicWaker.html
docs/base58/: index.html
docs/base_x/: fn.decode.html  struct.DecodeError.html
docs/bip39/: enum.ErrorKind.html  enum.Language.html  enum.MnemonicType.html
docs/bitvec/: macro.bitvec.html
docs/blake2/: struct.Blake2b.html  struct.Blake2s.html  struct.VarBlake2b.html  trait.Digest.html
docs/block_padding/: enum.AnsiX923.html  enum.Iso7816.html  enum.Pkcs7.html  enum.ZeroPadding.html  struct.PadError.html  struct.UnpadError.html  trait.Padding.html
docs/blocking/: fn.unblock.html
docs/bs58/: fn.encode.html  index.html
docs/bstr/: struct.BStr.html  struct.BString.html  trait.ByteSlice.html
docs/bumpalo/: struct.Bump.html
docs/byte_slice_cast/: trait.AsSliceOf.html  (+3 more)
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/certificate/: .gitignore  Cargo.toml  README.md
pallets/certificate/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/identity/: Cargo.toml  README.md
pallets/identity/src/: benchmarking.rs  default_weights.rs  lib.rs  mock.rs  test.rs  tests.rs  weights.rs
pallets/keystore/: Cargo.toml  README.md
pallets/keystore/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/lockable/: Cargo.toml
pallets/lockable/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/signal/: Cargo.toml  README.md
pallets/signal/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  tests.rs
pallets/trust/: Cargo.toml  README.md
pallets/trust/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/fennel/: Cargo.toml
runtime/fennel/src/: constants.rs  lib.rs  xcm_config.rs
runtime/fennel/src/weights/: balances_weights.rs  benchmarking_weights.rs  block_weights.rs  extrinsic_weights.rs  keystore_weights.rs  machine-bench.txt  mod.rs  pallet_balances.rs  pallet_certificate.rs  pallet_collator_selection.rs  pallet_collective_council.rs  pallet_collective_technical_committee.rs  pallet_democracy.rs  pallet_fennel_identity.rs  pallet_identity.rs  pallet_keystore.rs  pallet_lockable.rs  pallet_preimage.rs  pallet_scheduler.rs  pallet_session.rs  pallet_signal.rs  pallet_timestamp.rs  pallet_treasury.rs  pallet_trust.rs  paritydb_weights.rs  rocksdb_weights.rs  signal_weights.rs  system_weights.rs  timestamp_weights.rs  trust_weights.rs
runtime/src/: lib.rs
scripts/: bench.sh  build-release.sh  build-run.sh  build-test.sh  run-benchmarks.sh  run-parachain-benchmarks.sh  setup.sh
(+145278 files in other folders)
