[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
description = 'The fennel-protocol substrate node.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-fennel-protocol'
publish = false
repository = 'https://github.com/Romulus10/fennel-protocol'
version = '3.0.0-monthly-2022-02'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'node-fennel-protocol'

[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2022-02'
version = '3.0.0'

[dependencies]
jsonrpc-core = '18.0.0'
structopt = '0.3.8'

fennel-protocol-runtime = { path = '../runtime', version = '3.0.0-monthly-2022-02' }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }

frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sc-cli = { features = ['wasmtime'], git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sc-client-api = { git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sc-consensus = { git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sc-consensus-aura = {  git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sc-executor = {  features = ['wasmtime'], git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }

sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sc-keystore = { git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sc-rpc = { git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sc-service = { features = ['wasmtime'], git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sc-telemetry = { git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sc-transaction-pool-api = { git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sp-api = { git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sp-block-builder  = { git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sp-blockchain = { git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sp-consensus = { git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sp-core = { git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sp-finality-grandpa = {git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sp-timestamp = { git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }

[features]
default = []
runtime-benchmarks = ['fennel-protocol-runtime/runtime-benchmarks']
