[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'fennel-protocol-runtime'
publish = false
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0-monthly-2022-02'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies] 
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }

[dependencies]
# Fennel Pallets
pallet-trust = { default-features = false, path = '../pallets/trust', version = '2.0.0' }
pallet-keystore = { default-features = false, path = '../pallets/keystore', version = '2.0.0' }
pallet-signal = { default-features = false, path = '../pallets/signal', version = '2.0.0' }
pallet-fennel-identity = { default-features = false, path = '../pallets/identity', version = '3.0.0-monthly-2022-02' }

# FRAME
frame-benchmarking = { default-features = false,  git = 'https://github.com/paritytech/substrate.git', optional = true, branch = "master" }
frame-executive = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
frame-system-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', optional = true, branch = "master" }
frame-system-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
# Parity Pallets
pallet-aura = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
pallet-balances = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
pallet-grandpa = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
pallet-randomness-collective-flip = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
pallet-sudo = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
pallet-timestamp = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
pallet-transaction-payment = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
# Substrate primitives
sp-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-block-builder = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-consensus-aura = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-inherents = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-offchain = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-session = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-transaction-pool = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
sp-version = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }

codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.3.1' } 
hex-literal = { optional = true, version = '0.3.1' }


[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
    'pallet-fennel-identity/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'pallet-trust/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-fennel-identity/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-trust/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
