# SBP-M1 review: package attributes not set properly
[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'fennel-protocol-runtime'
publish = false
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0-monthly-2022-02'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies] 
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }


# SBP-M1 review: use newer Substrate version, like v0.9.40
[dependencies]
# Fennel Pallets
pallet-trust = { default-features = false, path = '../pallets/trust', version = '2.0.0' }
pallet-keystore = { default-features = false, path = '../pallets/keystore', version = '2.0.0' }
pallet-signal = { default-features = false, path = '../pallets/signal', version = '2.0.0' }
pallet-fennel-identity = { default-features = false, path = '../pallets/identity', version = '3.0.0-monthly-2022-02' }
pallet-certificate = { default-features = false, path = '../pallets/certificate', version = '2.0.0' }

# FRAME
frame-benchmarking = { default-features = false,  git = 'https://github.com/paritytech/substrate.git', optional = true, tag = "monthly-2022-02" }
frame-executive = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
frame-system-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', optional = true, tag = "monthly-2022-02" }
frame-system-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
# Parity Pallets
pallet-aura = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
pallet-balances = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
pallet-grandpa = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
pallet-randomness-collective-flip = {default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
pallet-sudo = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
pallet-timestamp = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
pallet-transaction-payment = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
# Substrate primitives
sp-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sp-block-builder = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sp-consensus-aura = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sp-inherents = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sp-offchain = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sp-session = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sp-transaction-pool = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sp-version = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }

codec = { default-features = false, features = ['derive', 'max-encoded-len'], package = 'parity-scale-codec', version = '2.3.1' } 
hex-literal = { optional = true, version = '0.3.1' }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
syn = { version = "=1.0.82" }

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
    'pallet-fennel-identity/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'pallet-keystore/runtime-benchmarks',
    'pallet-trust/runtime-benchmarks',
    'pallet-signal/runtime-benchmarks',
    'pallet-certificate/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-fennel-identity/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-keystore/std',
    'pallet-trust/std',
    'pallet-certificate/std',
    'pallet-timestamp/std',
    'pallet-signal/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
