[package]
authors = ['Fennel Labs <https://github.com/fennelLabs>']
description = 'FRAME pallet providing Fennel certificate logic.'
edition = '2018'
homepage = 'https://fennellabs.com'
license = 'Unlicense'
name = 'pallet-certificate'
repository = 'https://github.com/fennelLabs/fennel-protocol/'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
codec = { default-features = false, features = ['derive', 'max-encoded-len'], package = 'parity-scale-codec', version = '2.3.1' }
frame-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', optional = true, tag = "monthly-2022-02" }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }

[dev-dependencies]
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = "monthly-2022-02" }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'scale-info/std'
]
try-runtime = ['frame-support/try-runtime']
